deploy: 90b7d4bdc89f3301137d08edd31cb8c5049a96d5

--- a/man/latest/fccanalysis-script.html
+++ b/man/latest/fccanalysis-script.html
@@ -156,6 +156,14 @@
     <br/>
     Default value: 1 (full process sample)
     <br/>
+    <i>input_dir</i>
+    <br/>
+    Specifies the location of the process different from the globally set one.
+      This overrides both prodTag and inputDir attributes of the analysis
+      script.
+    <br/>
+    Default value: None
+    <br/>
     <i>output</i>
     <br/>
     Specifies the stem for the output file(s). The stem will be used to create
